fix responsive on tablet

--- a/src/component/layout/content/home/home.scss
+++ b/src/component/layout/content/home/home.scss
@@ -172,7 +172,7 @@
         margin: -60px 0 0 -280px;
       }
 
-      @media (max-width:768px) {
+      @media (max-width:812px) {
         .diamond_1 {
           margin: 0;
         }
